--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/react": "^1.6.22",
     "chart.js": "^3.6.0",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
     "gatsby": "^4.2.0",
@@ -29,6 +30,7 @@
     "gatsby-plugin-twitter": "^4.2.0",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typescript": "^4.2.0",
+    "gatsby-plugin-use-dark-mode": "^1.4.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^5.2.0",
     "gatsby-remark-images": "^6.2.0",
@@ -60,6 +62,7 @@
     "twin.macro": "^2.8.1",
     "typescript": "^4.5.2",
     "url-join-ts": "^1.0.5",
+    "use-dark-mode": "^2.3.1",
     "yargs": "^17.3.0"
   },
   "devDependencies": {
