--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM public.ecr.aws/lambda/go:1 AS development
 
-RUN yum install -y sqlite sqlite-devel \
+RUN yum install -y sqlite sqlite-devel golang \
     && go get github.com/pressly/goose/cmd/goose
 
 # Install go dependencies
@@ -10,7 +10,7 @@ RUN go mod download
 
 # Build the app
 ADD . /src
-RUN OUTPUT_DIR="${LAMBDA_TASK_ROOT}" CGO_ENABLED=1  make static-build
+RUN OUTPUT_DIR="${LAMBDA_TASK_ROOT}" make static-build
 
 EXPOSE 8080
 WORKDIR ${LAMBDA_TASK_ROOT}
