--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -31,6 +31,7 @@ functions:
     image: 
       name: api-eligundry-com
     description: My personal API
+    reservedConcurrency: 1
     environment:
       AUTH_USER: ${env:AUTH_USER}
       AUTH_PASSWORD: ${env:AUTH_PASSWORD}
