--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -12,55 +12,55 @@
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.25.0",
-    "dotenv": "^10.0.0",
-    "gatsby": "^4.2.0",
-    "gatsby-plugin-catch-links": "^4.2.0",
-    "gatsby-plugin-feed": "^4.2.0",
-    "gatsby-plugin-google-tagmanager": "^4.2.0",
-    "gatsby-plugin-image": "^2.2.0",
-    "gatsby-plugin-lodash": "^5.2.0",
-    "gatsby-plugin-mdx": "^3.2.0",
+    "dotenv": "^15.0.0",
+    "gatsby": "^4.6.1",
+    "gatsby-plugin-catch-links": "^4.6.0",
+    "gatsby-plugin-feed": "^4.6.0",
+    "gatsby-plugin-google-tagmanager": "^4.6.0",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-lodash": "^5.6.0",
+    "gatsby-plugin-mdx": "^3.6.0",
     "gatsby-plugin-netlify": "^4.0.0-next.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-sass": "^5.2.0",
-    "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-plugin-sitemap": "^5.2.0",
-    "gatsby-plugin-styled-components": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^5.6.0",
+    "gatsby-plugin-sass": "^5.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sitemap": "^5.6.0",
+    "gatsby-plugin-styled-components": "^5.6.0",
     "gatsby-plugin-ts-config": "^1.1.5",
-    "gatsby-plugin-twitter": "^4.2.0",
+    "gatsby-plugin-twitter": "^4.6.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typescript": "^4.2.0",
+    "gatsby-plugin-typescript": "^4.6.0",
     "gatsby-plugin-use-dark-mode": "^1.4.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^5.2.0",
-    "gatsby-remark-images": "^6.2.0",
-    "gatsby-remark-prismjs": "^6.2.0",
-    "gatsby-remark-responsive-iframe": "^5.2.0",
+    "gatsby-remark-copy-linked-files": "^5.6.0",
+    "gatsby-remark-images": "^6.6.0",
+    "gatsby-remark-prismjs": "^6.6.0",
+    "gatsby-remark-responsive-iframe": "^5.6.0",
     "gatsby-source-custom-api": "^2.3.2",
-    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-source-filesystem": "^4.6.0",
     "gatsby-source-lastfm": "^0.1.2",
-    "gatsby-transformer-sharp": "^4.2.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "lodash": "^4.17.21",
     "postscribe": "^2.0.8",
-    "prismjs": "^1.25.0",
+    "prismjs": "^1.26.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
-    "react-github-calendar": "^3.1.2",
+    "react-github-calendar": "^3.2.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
     "react-loading-skeleton": "^3.0.1",
     "react-schemaorg": "^2.0.0",
     "react-tooltip": "^4.2.21",
-    "react-use": "^17.3.1",
-    "sass": "^1.43.4",
+    "react-use": "^17.3.2",
+    "sass": "^1.49.7",
     "schema-dts": "^1.0.0",
     "simple-git": "^2.47.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19",
-    "twin.macro": "^2.8.1",
-    "typescript": "^4.5.2",
+    "twin.macro": "^2.8.2",
+    "typescript": "^4.5.5",
     "url-join-ts": "^1.0.5",
     "use-dark-mode": "^2.3.1",
     "yargs": "^17.3.0"
@@ -73,13 +73,12 @@
     "@types/tailwindcss": "^2.2.4",
     "@types/yargs": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "babel-plugin-styled-components": "^1.11.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "@typescript-eslint/parser": "^5.10.2",
+    "babel-plugin-styled-components": "^2.0.2",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.4.1",
-    "typescript-eslint-parser": "^22.0.0"
+    "prettier": "^2.5.1"
   },
   "keywords": [
     "gatsby"
@@ -109,7 +108,6 @@
     "twin": {
       "config": "src/tailwind.config.js",
       "preset": "styled-components",
-      "autoCssProp": true,
       "debugPlugins": false,
       "debug": false
     }
@@ -131,7 +129,8 @@
       "public",
       "static",
       ".cache",
-      "content"
+      "content",
+      "*.d.ts"
     ],
     "rules": {
       "react/prefer-stateless-function": "off",
@@ -184,6 +183,14 @@
           "jsx": "never",
           "ts": "never",
           "tsx": "never"
+        }
+      ],
+      "react/function-component-definition": [
+        2,
+        {
+          "namedComponents": [
+            "arrow-function"
+          ]
         }
       ]
     },
