--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -13,33 +13,33 @@
     "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.25.0",
     "dotenv": "^15.0.0",
-    "gatsby": "^4.6.1",
-    "gatsby-plugin-catch-links": "^4.6.0",
-    "gatsby-plugin-feed": "^4.6.0",
-    "gatsby-plugin-google-tagmanager": "^4.6.0",
-    "gatsby-plugin-image": "^2.6.0",
-    "gatsby-plugin-lodash": "^5.6.0",
-    "gatsby-plugin-mdx": "^3.6.0",
-    "gatsby-plugin-netlify": "^4.0.0-next.0",
-    "gatsby-plugin-react-helmet": "^5.6.0",
-    "gatsby-plugin-sass": "^5.6.0",
-    "gatsby-plugin-sharp": "^4.6.0",
-    "gatsby-plugin-sitemap": "^5.6.0",
-    "gatsby-plugin-styled-components": "^5.6.0",
+    "gatsby": "^4.7.1",
+    "gatsby-plugin-catch-links": "^4.7.0",
+    "gatsby-plugin-feed": "^4.7.0",
+    "gatsby-plugin-google-tagmanager": "^4.7.0",
+    "gatsby-plugin-image": "^2.7.0",
+    "gatsby-plugin-lodash": "^5.7.0",
+    "gatsby-plugin-mdx": "^3.7.0",
+    "gatsby-plugin-netlify": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^5.7.0",
+    "gatsby-plugin-sass": "^5.7.0",
+    "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-sitemap": "^5.7.0",
+    "gatsby-plugin-styled-components": "^5.7.0",
     "gatsby-plugin-ts-config": "^1.1.5",
-    "gatsby-plugin-twitter": "^4.6.0",
+    "gatsby-plugin-twitter": "^4.7.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typescript": "^4.6.0",
+    "gatsby-plugin-typescript": "^4.7.0",
     "gatsby-plugin-use-dark-mode": "^1.4.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^5.6.0",
-    "gatsby-remark-images": "^6.6.0",
-    "gatsby-remark-prismjs": "^6.6.0",
-    "gatsby-remark-responsive-iframe": "^5.6.0",
+    "gatsby-remark-copy-linked-files": "^5.7.0",
+    "gatsby-remark-images": "^6.7.0",
+    "gatsby-remark-prismjs": "^6.7.0",
+    "gatsby-remark-responsive-iframe": "^5.7.0",
     "gatsby-source-custom-api": "^2.3.2",
-    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-source-filesystem": "^4.7.0",
     "gatsby-source-lastfm": "^0.1.2",
-    "gatsby-transformer-sharp": "^4.6.0",
+    "gatsby-transformer-sharp": "^4.7.0",
     "lodash": "^4.17.21",
     "postscribe": "^2.0.8",
     "prismjs": "^1.26.0",
@@ -86,7 +86,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "start": "gatsby develop --host 0.0.0.0",
+    "start": "gatsby develop",
     "develop": "gatsby develop",
     "serve": "gatsby serve",
     "build": "gatsby build",
