--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -13,6 +13,7 @@
     "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.28.0",
     "dotenv": "^15.0.0",
+    "fs-extra": "^10.0.1",
     "gatsby": "^4.9.0",
     "gatsby-plugin-catch-links": "^4.9.0",
     "gatsby-plugin-feed": "^4.9.0",
