--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -13,32 +13,32 @@
     "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.28.0",
     "dotenv": "^15.0.0",
-    "gatsby": "^4.8.0",
-    "gatsby-plugin-catch-links": "^4.8.0",
-    "gatsby-plugin-feed": "^4.8.0",
-    "gatsby-plugin-google-tagmanager": "^4.8.0",
-    "gatsby-plugin-image": "^2.8.0",
-    "gatsby-plugin-lodash": "^5.8.0",
-    "gatsby-plugin-mdx": "^3.8.0",
+    "fs-extra": "^10.0.1",
+    "gatsby": "^4.9.2",
+    "gatsby-plugin-catch-links": "^4.9.0",
+    "gatsby-plugin-feed": "^4.9.0",
+    "gatsby-plugin-google-tagmanager": "^4.9.0",
+    "gatsby-plugin-image": "^2.9.0",
+    "gatsby-plugin-lodash": "^5.9.0",
+    "gatsby-plugin-mdx": "^3.9.0",
     "gatsby-plugin-netlify": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^5.8.0",
-    "gatsby-plugin-sass": "^5.8.0",
-    "gatsby-plugin-sharp": "^4.8.0",
-    "gatsby-plugin-sitemap": "^5.8.0",
-    "gatsby-plugin-styled-components": "^5.8.0",
-    "gatsby-plugin-ts-config": "^1.1.5",
-    "gatsby-plugin-twitter": "^4.8.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-sass": "^5.9.0",
+    "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-plugin-sitemap": "^5.9.0",
+    "gatsby-plugin-styled-components": "^5.9.0",
+    "gatsby-plugin-twitter": "^4.9.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typescript": "^4.8.0",
+    "gatsby-plugin-typescript": "^4.9.0",
     "gatsby-plugin-use-dark-mode": "^1.4.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^5.8.0",
-    "gatsby-remark-images": "^6.8.0",
-    "gatsby-remark-prismjs": "^6.8.0",
-    "gatsby-remark-responsive-iframe": "^5.8.0",
-    "gatsby-source-filesystem": "^4.8.0",
+    "gatsby-remark-copy-linked-files": "^5.9.0",
+    "gatsby-remark-images": "^6.9.0",
+    "gatsby-remark-prismjs": "^6.9.0",
+    "gatsby-remark-responsive-iframe": "^5.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
     "gatsby-source-lastfm": "^0.1.2",
-    "gatsby-transformer-sharp": "^4.8.0",
+    "gatsby-transformer-sharp": "^4.9.0",
     "lodash": "^4.17.21",
     "postscribe": "^2.0.8",
     "prismjs": "^1.26.0",
@@ -83,7 +83,6 @@
     "gatsby"
   ],
   "license": "MIT",
-  "main": "n/a",
   "scripts": {
     "start": "gatsby develop",
     "develop": "gatsby develop",
