--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -44,6 +44,7 @@ functions:
 
   staticSiteBuildTrigger:
     name: staticSiteBuildTrigger
+    description: "Triggers a Netlify build of my site. Fuck NAT Gateways"
     image:
       name: api-eligundry-com
       entrypoint:
