--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -54,7 +54,7 @@ functions:
         - '/bin/static-site-build-trigger'
     events:
       - http:
-          path: '/netlify/build'
+          path: '/api/netlify/build'
           method: POST
     environment:
       AUTH_USER: ${env:AUTH_USER}
