--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -6,6 +6,10 @@ on:
       - fix-serverless-deploy
     paths:
       - 'api/**'
+      - '.github/**'
+
+  workflow_dispatch:
+    inputs: {}
 
 jobs:
   api:
@@ -13,19 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-
       - uses: bahmutov/npm-install@v1
         with:
           working-directory: api
-
-      - name: Build the API and setup for serverless deploy
-        working-directory: api
-        run: |
-          echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
-          make static-build-api 
 
       - name: Deploy to AWS Lambda
         working-directory: api
@@ -35,4 +29,6 @@ jobs:
           AUTH_USER: ${{ secrets.AUTH_USER }}
           AUTH_PASSWORD: ${{ secrets.AUTH_PASSWORD }}
           NETLIFY_BUILD_HOOK: ${{ secrets.NETLIFY_BUILD_HOOK }}
-        run: serverless deploy
+        run: |
+          echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
+          ./node_modules/.bin/serverless deploy
