--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -5,6 +5,10 @@ package:
     - '!**'
     - 'bin/api'
 
+plugins:
+  - serverless-iam-roles-per-function
+  - serverless-dotenv-plugin
+
 provider:
   name: aws
   runtime: go1.x
@@ -13,28 +17,49 @@ provider:
   timeout: 30
   iamManagedPolicies:
     - arn:aws:iam::aws:policy/AmazonElasticFileSystemClientReadWriteAccess
-  vpc:
-    securityGroupIds:
-      - sg-0e3bfc2b96d5cc044
-    subnetIds:
-      - subnet-051997fc3d1383284
-      - subnet-026cddc40fb470bbc
-      - subnet-0e4ce11da300407ad
+  ecr:
+    images:
+      api-eligundry-com:
+        path: ./
 
 functions:
   api:
-    handler: bin/api
     name: eliGundryApi
+    image: 
+      name: api-eligundry-com
     description: My personal API
     environment:
       AUTH_USER: ${env:AUTH_USER}
       AUTH_PASSWORD: ${env:AUTH_PASSWORD}
-      NETLIFY_BUILD_HOOK: ${env:NETLIFY_BUILD_HOOK}
       DATABASE_PATH: "/mnt/database/api.db"
+      GIN_MODE: "release"
     events:
       - http:
           path: '/{proxy+}'
           method: ANY
+    vpc:
+      securityGroupIds:
+        - sg-0e3bfc2b96d5cc044
+      subnetIds:
+        - subnet-051997fc3d1383284
+        - subnet-026cddc40fb470bbc
+        - subnet-0e4ce11da300407ad
+
+  staticSiteBuildTrigger:
+    name: staticSiteBuildTrigger
+    description: "Triggers a Netlify build of my site. Fuck NAT Gateways"
+    image:
+      name: api-eligundry-com
+      entryPoint:
+        - '/bin/static-site-build-trigger'
+    events:
+      - http:
+          path: '/api/netlify/build'
+          method: POST
+    environment:
+      AUTH_USER: ${env:AUTH_USER}
+      AUTH_PASSWORD: ${env:AUTH_PASSWORD}
+      NETLIFY_BUILD_HOOK: ${env:NETLIFY_BUILD_HOOK}
 
 resources:
   extensions:
