--- a/next/package.json
+++ b/next/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^2.1.0",
+    "@mdx-js/react": "^2.1.0",
+    "@next/mdx": "^12.1.0",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
+    "chartjs-adapter-date-fns": "^2.0.0",
+    "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-mdx-remote": "^4.0.0",
+    "next-transpile-modules": "^9.0.0",
+    "postscribe": "^2.0.8",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-lazyload": "^3.2.0",
+    "react-lite-yt-embed": "^1.2.7",
     "react-loading-skeleton": "^3.0.3",
     "react-tooltip": "^4.2.21",
     "react-use": "^17.3.2",
+    "rehype-img-size": "^1.0.1",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19",
     "twin.macro": "^2.8.2",
