--- a/next/package.json
+++ b/next/package.json
@@ -18,6 +18,7 @@
     "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
+    "jsdom": "^19.0.0",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-compose-plugins": "^2.2.1",
@@ -41,6 +42,7 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
