--- a/next/package.json
+++ b/next/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.0",
     "@mdx-js/mdx": "^2.1.0",
     "@mdx-js/react": "^2.1.0",
     "@next/mdx": "^12.1.0",
     "axios": "^0.26.1",
+    "axios-cache-adapter": "^2.7.3",
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-sankey": "^0.8.1",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "gray-matter": "^4.0.3",
     "jsdom": "^19.0.0",
+    "lastfm-typed": "^2.0.1",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^4.0.0",
     "next-transpile-modules": "^9.0.0",
+    "node-cache": "^5.1.2",
     "postscribe": "^2.0.8",
     "react": "17.0.2",
     "react-chartjs-2": "^3.3.0",
