--- a/next/package.json
+++ b/next/package.json
@@ -40,8 +40,10 @@
     "react-loading-skeleton": "^3.0.3",
     "react-schemaorg": "^2.0.0",
     "react-tooltip": "^4.2.21",
+    "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
     "rehype-img-size": "^1.0.1",
+    "rehype-prism-plus": "^1.3.2",
     "schema-dts": "^1.1.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19",
@@ -54,6 +56,7 @@
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
+    "@types/react-lazyload": "^3.2.0",
     "@types/styled-components": "^5.1.24",
     "@types/tailwindcss": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
@@ -87,100 +90,5 @@
     ">1%",
     "not IE 11",
     "not ie_mob 11"
-  ],
-  "eslintConfig": {
-    "extends": [
-      "airbnb",
-      "next",
-      "next/core-web-vitals",
-      "prettier",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "ignorePatterns": [
-      "public",
-      "static",
-      ".cache",
-      "content",
-      "*.d.ts"
-    ],
-    "rules": {
-      "react/prefer-stateless-function": "off",
-      "react/prop-types": "off",
-      "react/no-danger": "off",
-      "react/destructuring-assignment": "off",
-      "react/no-unescaped-entities": "off",
-      "react/jsx-one-expression-per-line": "off",
-      "react/jsx-props-no-spreading": "off",
-      "@typescript-eslint/explicit-function-return-type": "off",
-      "@typescript-eslint/explicit-module-boundary-types": "off",
-      "@typescript-eslint/ban-ts-comment": "off",
-      "no-use-before-define": "off",
-      "react/require-default-props": "off",
-      "no-param-reassign": "off",
-      "radix": "off",
-      "jsx-a11y/anchor-is-valid": [
-        "error",
-        {
-          "components": [
-            "Link"
-          ],
-          "specialLink": [
-            "hrefLeft",
-            "hrefRight",
-            "to"
-          ],
-          "aspects": [
-            "noHref",
-            "invalidHref",
-            "preferButton"
-          ]
-        }
-      ],
-      "react/jsx-filename-extension": [
-        1,
-        {
-          "extensions": [
-            ".tsx",
-            ".jsx"
-          ]
-        }
-      ],
-      "import/extensions": [
-        "error",
-        "ignorePackages",
-        {
-          "js": "never",
-          "mjs": "never",
-          "jsx": "never",
-          "ts": "never",
-          "tsx": "never"
-        }
-      ],
-      "react/function-component-definition": [
-        2,
-        {
-          "namedComponents": [
-            "arrow-function"
-          ]
-        }
-      ]
-    },
-    "settings": {
-      "import/core-modules": [],
-      "import/resolver": {
-        "node": {
-          "extensions": [
-            ".js",
-            ".jsx",
-            ".ts",
-            ".tsx"
-          ]
-        }
-      }
-    },
-    "env": {
-      "browser": true
-    }
-  }
+  ]
 }
