--- a/next/.gitignore
+++ b/next/.gitignore
@@ -1,4 +1,6 @@
 public/*.rss
+public/sitemap*.xml
+public/robots.txt
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
