--- a/next/package.json
+++ b/next/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:sitemap": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -46,6 +47,7 @@
     "rehype-img-size": "^1.0.1",
     "rehype-prism-plus": "^1.3.2",
     "schema-dts": "^1.1.0",
+    "simple-git": "^3.4.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19",
     "twin.macro": "^2.8.2",
@@ -67,6 +69,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "next-sitemap": "^2.5.14",
     "prettier": "^2.6.0",
     "sass": "^1.49.9",
     "typescript": "4.6.2"
