--- a/next/package.json
+++ b/next/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "build:sitemap": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
