--- a/next/package.json
+++ b/next/package.json
@@ -56,6 +56,7 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.1.2",
     "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.23",
