--- a/next/package.json
+++ b/next/package.json
@@ -46,8 +46,10 @@
     "react-tooltip": "^4.2.21",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
+    "rehype-accessible-emojis": "^0.3.2",
     "rehype-img-size": "^1.0.1",
     "rehype-prism-plus": "^1.3.2",
+    "rehype-slug": "^5.0.1",
     "schema-dts": "^1.1.0",
     "simple-git": "^3.4.0",
     "styled-components": "^5.3.3",
@@ -62,6 +64,7 @@
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
+    "@types/react-dom": "^17.0.14",
     "@types/react-lazyload": "^3.2.0",
     "@types/styled-components": "^5.1.24",
     "@types/tailwindcss": "^3.0.9",
