--- a/next/package.json
+++ b/next/package.json
@@ -41,6 +41,7 @@
     "next-transpile-modules": "^9.0.0",
     "node-cache": "^5.1.2",
     "postscribe": "^2.0.8",
+    "promise-hash": "^1.3.0",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
@@ -70,6 +71,7 @@
     "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.23",
+    "@types/promise-hash": "^1.3.0",
     "@types/react": "17.0.42",
     "@types/react-dom": "^17.0.14",
     "@types/react-lazyload": "^3.2.0",
