--- a/next/package.json
+++ b/next/package.json
@@ -59,6 +59,7 @@
     "rehype-img-size": "^1.0.1",
     "rehype-prism-plus": "^1.3.2",
     "rehype-slug": "^5.0.1",
+    "remark-reading-time": "^2.0.1",
     "schema-dts": "^1.1.0",
     "simple-git": "^3.4.0",
     "styled-components": "^5.3.3",
