--- a/next/package.json
+++ b/next/package.json
@@ -25,9 +25,11 @@
     "@next/mdx": "^12.1.0",
     "axios": "^0.26.1",
     "axios-cache-adapter": "^2.7.3",
+    "canvas": "^2.9.1",
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-sankey": "^0.8.1",
+    "color-thief-node": "^1.0.4",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "feed": "^4.2.2",
@@ -57,7 +59,7 @@
     "react-twitter-embed": "^4.0.4",
     "react-use": "^17.3.2",
     "rehype-accessible-emojis": "^0.3.2",
-    "rehype-img-size": "^1.0.1",
+    "rehype-image-placeholder": "^1.0.1",
     "rehype-prism-plus": "^1.3.2",
     "rehype-slug": "^5.0.1",
     "remark-reading-time": "^2.0.1",
@@ -71,6 +73,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.2",
+    "@types/color-thief-node": "^1.0.1",
     "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.23",
