--- a/next/package.json
+++ b/next/package.json
@@ -32,15 +32,15 @@
     "color-thief-node": "^1.0.4",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "esbuild": "^0.14.29",
     "feed": "^4.2.2",
-    "gray-matter": "^4.0.3",
     "jsdom": "^19.0.0",
     "lastfm-typed": "^2.0.1",
     "lodash": "^4.17.21",
+    "mdx-bundler": "^9.0.0",
     "next": "12.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
-    "next-mdx-remote": "^4.0.0",
     "next-transpile-modules": "^9.0.0",
     "node-cache": "^5.1.2",
     "postscribe": "^2.0.8",
@@ -63,6 +63,7 @@
     "rehype-prism-plus": "^1.3.2",
     "rehype-slug": "^5.0.1",
     "remark-reading-time": "^2.0.1",
+    "remark-unwrap-images": "^3.0.1",
     "schema-dts": "^1.1.0",
     "simple-git": "^3.4.0",
     "styled-components": "^5.3.3",
