--- a/next/package.json
+++ b/next/package.json
@@ -25,20 +25,22 @@
     "@next/mdx": "^12.1.0",
     "axios": "^0.26.1",
     "axios-cache-adapter": "^2.7.3",
+    "canvas": "^2.9.1",
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-sankey": "^0.8.1",
+    "color-thief-node": "^1.0.4",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "esbuild": "^0.14.29",
     "feed": "^4.2.2",
-    "gray-matter": "^4.0.3",
     "jsdom": "^19.0.0",
     "lastfm-typed": "^2.0.1",
     "lodash": "^4.17.21",
+    "mdx-bundler": "^9.0.0",
     "next": "12.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
-    "next-mdx-remote": "^4.0.0",
     "next-transpile-modules": "^9.0.0",
     "node-cache": "^5.1.2",
     "postscribe": "^2.0.8",
@@ -57,10 +59,11 @@
     "react-twitter-embed": "^4.0.4",
     "react-use": "^17.3.2",
     "rehype-accessible-emojis": "^0.3.2",
-    "rehype-img-size": "^1.0.1",
+    "rehype-image-placeholder": "^1.0.1",
     "rehype-prism-plus": "^1.3.2",
     "rehype-slug": "^5.0.1",
     "remark-reading-time": "^2.0.1",
+    "remark-unwrap-images": "^3.0.1",
     "schema-dts": "^1.1.0",
     "simple-git": "^3.4.0",
     "styled-components": "^5.3.3",
@@ -71,6 +74,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.2",
+    "@types/color-thief-node": "^1.0.1",
     "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.23",
