--- a/next/package.json
+++ b/next/package.json
@@ -25,11 +25,9 @@
     "@next/mdx": "^12.1.0",
     "axios": "^0.26.1",
     "axios-cache-adapter": "^2.7.3",
-    "canvas": "^2.9.1",
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-sankey": "^0.8.1",
-    "color-thief-node": "^1.0.4",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.29",
@@ -43,6 +41,7 @@
     "next-images": "^1.8.4",
     "next-transpile-modules": "^9.0.0",
     "node-cache": "^5.1.2",
+    "plaiceholder": "^2.3.0",
     "postscribe": "^2.0.8",
     "promise-hash": "^1.3.0",
     "react": "17.0.2",
@@ -65,6 +64,7 @@
     "remark-reading-time": "^2.0.1",
     "remark-unwrap-images": "^3.0.1",
     "schema-dts": "^1.1.0",
+    "sharp": "^0.30.3",
     "simple-git": "^3.4.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19",
