--- a/next/package.json
+++ b/next/package.json
@@ -57,11 +57,11 @@
     "react-tweet-embed": "^2.0.0",
     "react-twitter-embed": "^4.0.4",
     "react-use": "^17.3.2",
+    "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-image-placeholder": "^1.0.1",
     "rehype-prism-plus": "^1.3.2",
     "rehype-slug": "^5.0.1",
-    "remark-reading-time": "^2.0.1",
     "remark-unwrap-images": "^3.0.1",
     "schema-dts": "^1.1.0",
     "sharp": "^0.30.3",
