--- a/next/package.json
+++ b/next/package.json
@@ -96,6 +96,7 @@
     "eslint-config-prettier": "^8.5.0",
     "next-sitemap": "^2.5.14",
     "prettier": "^2.6.0",
+    "raw-loader": "^4.0.2",
     "sass": "^1.49.9",
     "typescript": "4.6.2"
   },
