--- a/astro/package.json
+++ b/astro/package.json
@@ -23,10 +23,13 @@
     "@astrojs/turbolinks": "^0.1.2",
     "astro": "^1.0.0-beta.27",
     "prettier": "^2.6.2",
+    "prettier-plugin-astro": "^0.0.12",
     "sass": "^1.50.1",
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
     "preact": "^10.7.1"
   }
 }
