--- a/astro/package.json
+++ b/astro/package.json
@@ -18,9 +18,12 @@
   "devDependencies": {
     "@astrojs/partytown": "^0.1.2",
     "@astrojs/preact": "^0.1.2",
+    "@astrojs/react": "^0.1.1",
     "@astrojs/sitemap": "^0.1.0",
     "@astrojs/tailwind": "^0.2.1",
     "@astrojs/turbolinks": "^0.1.2",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "astro": "^1.0.0-beta.27",
     "prettier": "^2.6.2",
     "prettier-plugin-astro": "^0.0.12",
@@ -30,6 +33,9 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
-    "preact": "^10.7.1"
+    "preact": "^10.7.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-lite-youtube-embed": "^2.2.2"
   }
 }
