--- a/eslint.config.json
+++ b/eslint.config.json
@@ -1,29 +1,18 @@
 {
-  "extends": [
-    "plugin:astro/recommended",
-    "plugin:mdx/recommended",
-    "prettier"
-  ],
+  "extends": ["plugin:astro/recommended", "plugin:mdx/recommended", "prettier"],
   "overrides": [
     {
-      "files": [
-        "*.astro"
-      ],
+      "files": ["*.astro"],
       "parser": "astro-eslint-parser",
       "parserOptions": {
         "parser": "@typescript-eslint/parser",
-        "extraFileExtensions": [
-          ".astro"
-        ],
+        "extraFileExtensions": [".astro"],
         "sourceType": "module"
       },
       "rules": {}
     },
     {
-      "files": [
-        "*.ts",
-        "*.tsx"
-      ],
+      "files": ["*.ts", "*.tsx"],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "sourceType": "module"
@@ -31,9 +20,7 @@
       "rules": {}
     },
     {
-      "files": [
-        "*.mdx"
-      ],
+      "files": ["*.mdx"],
       "rules": {
         "null-null": "off"
       }
