--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "prettier": "prettier -w .",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx,.astro,.mdx",
+    "lint": "eslint ./src",
     "astro-check": "astro check",
     "type-check": "tsc --noEmit",
     "test": "vitest",
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@astro-community/astro-embed-youtube": "^0.5.6",
-    "@astrojs/mdx": "^4.0.1",
+    "@astrojs/mdx": "^4.0.8",
     "@astrojs/netlify": "^6.0.0",
     "@astrojs/partytown": "^2.1.2",
     "@astrojs/preact": "^4.0.0",
@@ -36,7 +36,7 @@
     "@netlify/functions": "^2.8.2",
     "@react-hookz/web": "^24.0.4",
     "@tailwindcss/typography": "^0.5.15",
-    "astro": "^5.0.3",
+    "astro": "^5.2.5",
     "astro-seo": "^0.8.4",
     "async-retry": "^1.3.3",
     "axios": "^1.7.9",
@@ -84,6 +84,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/async-retry": "^1.4.9",
     "@types/basic-auth": "^1.1.8",
@@ -93,12 +95,14 @@
     "@typescript-eslint/parser": "^8.17.0",
     "drizzle-kit": "^0.29.1",
     "eslint": "^9.16.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-mdx": "^3.1.5",
+    "eslint-plugin-prettier": "^5.2.3",
     "fontaine": "^0.5.0",
     "netlify-cli": "^17.38.0",
     "netlify-plugin-cache": "^1.0.3",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.0",
     "simple-git": "^3.27.0",
     "vitest": "^2.1.8"
   },
