--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "async-retry": "^1.3.3",
     "axios": "^1.7.9",
     "basic-auth": "^2.0.1",
-    "canvas": "^3.1.0",
     "chart.js": "^4.4.7",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-sankey": "^0.14.0",
@@ -65,6 +64,7 @@
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "preact": "^10.25.1",
+    "pureimage": "^0.4.18",
     "react-chartjs-2": "^5.2.0",
     "react-icons": "^5.4.0",
     "reading-time": "^1.5.0",
@@ -111,9 +111,6 @@
   },
   "overrides": {
     "react": "npm:@preact/compat@latest",
-    "react-dom": "npm:@preact/compat@latest",
-    "fast-average-color-node": {
-      "canvas": "3.1.0"
-    }
+    "react-dom": "npm:@preact/compat@latest"
   }
 }
