--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "preact": "^10.25.1",
+    "pureimage": "^0.4.18",
     "react-chartjs-2": "^5.2.0",
     "react-icons": "^5.4.0",
     "reading-time": "^1.5.0",
